--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,9 @@
 <div class="posts">
 {{ range .Data.Pages -}}
 <article class="post">
+  {{ $alternate_title := replace .File.BaseFileName "-" " " | title }}
   <h1 class="post-title">
-    <a href="{{ .Permalink }}">{{ .Title }}</a>
+    <a href="{{ .Permalink }}">{{ .Title | default $alternate_title }}</a>
   </h1>
   <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</time>
   {{ .Summary }}
