--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,9 @@
 {{ define "main" -}}
 <ul class="posts">
 {{ range .Data.Pages -}}
+  {{ $alternate_title := replace .File.BaseFileName "-" " " | title }}
   <li>
-    <span><a href="{{ .Permalink }}">{{ .Title }}</a> <time class="pull-right post-list" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Mon, Jan 2, 2006" }}</time></span>
+    <span><a href="{{ .Permalink }}">{{ .Title | default $alternate_title }}</a> <time class="pull-right post-list" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Mon, Jan 2, 2006" }}</time></span>
   </li>
 {{- end }}
 </ul>
