Add TOC to the theme, sort posts by ModTime.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" -}}
 <div class="posts">
-{{ range .Data.Pages -}}
+{{ range .Data.Pages.ByLastmod.Reverse -}}
 <article class="post">
   {{ $alternate_title := replaceRE "[0-9]{4}-[0-9]{2}-[0-9]{2}" "" .File.BaseFileName }}
   {{ $alternate_title := replace $alternate_title "-" " " | title }}
@@ -9,6 +9,7 @@
     <a href="{{ .Permalink }}">{{ .Title | default $alternate_title }}</a>
   </h1>
   <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</time>
+  <!-- <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Lastmod.Format "Mon, Jan 2, 2006" }}</time> -->
   {{ .Summary }}
   {{ if .Truncated }}
   <div class="read-more-link">
