--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,9 @@
   {{ $alternate_title := replaceRE "[0-9]{4}-[0-9]{2}-[0-9]{2}" "" .File.BaseFileName }}
   {{ $alternate_title := replace $alternate_title "-" " " | title }}
   <h1>{{ .Title | default $alternate_title }}</h1>
-  <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</time>
+  <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }} 
+    <a href="https://github.com/qiuwch/qiu.work/edit/master/content/{{ .Path }}">{{ emojify ":pencil:" }}</a>
+  </time>
   {{ .Content }}
 </div>
 
