--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,16 @@
 {{ define "main" -}}
+
+<ul class="sections">
+{{ range .Sections -}}
+  <li>
+    <span><a href="{{ .Permalink }}">{{ .Title }}</a> <time class="pull-right post-list" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Mon, Jan 2, 2006" }}</time></span>
+    <br><span>{{ .Path }}</span>
+  </li>
+{{- end }}
+</ul>
+
+<hr>
+
 <ul class="posts">
 {{ range .Data.Pages.ByLastmod.Reverse -}}
   <li>
@@ -9,4 +21,5 @@
   </li>
 {{- end }}
 </ul>
+
 {{- end }}
