Tune up mobile width for css detection.

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,7 +9,8 @@
 
 <style>
 /* small screens */
-@media (max-width: 768px) {
+/* Default value is 768px, iphone X is 1125px, so I need to tune it up */
+@media (max-width: 1200px) {
   /* override stickyness so that the navigation does not follow scrolling */
   nav[data-toggle='toc'] {
     margin-bottom: 42px;
