--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -33,6 +33,11 @@
 nav[data-toggle=toc] .nav>li>a {
   /* color: rgba(255,255,255,.5) */
   color: whitesmoke;
+  padding: 0px 0px;
+}
+nav[data-toggle=toc] .nav-link.active, nav[data-toggle=toc] .nav-link.active:focus, nav[data-toggle=toc] .nav-link.active:hover
+{
+  padding-left: 5px;
 }
 </style>
 
