--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,10 @@
 {{ define "main" -}}
 
+<style>
+    red { color: red; }
+    blue { color: blue; }
+</style>
+
 <div class="post">
   {{ partial "breadcrumb.html" . }}
 
