--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
 {{ partial "breadcrumb.html" . }}
 
 <ul class="sections">
-{{ range .Sections -}}
+{{ range sort .Sections "Path" -}}
   <li>
     <span><a href="{{ .Permalink }}">{{ .Title }}</a> <time class="pull-right post-list" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Mon, Jan 2, 2006" }}</time></span>
     <br><span>{{ .Path }}</span>
@@ -14,7 +14,7 @@
 <hr>
 
 <ul class="posts">
-{{ range .Data.Pages.ByLastmod.Reverse -}}
+{{ range sort .Data.Pages "Path" -}}
   <li>
     {{ $alternate_title := replaceRE "[0-9]{4}-[0-9]{2}-[0-9]{2}" "" .File.BaseFileName }}
     {{ $alternate_title := replace $alternate_title "-" " " | title }}
