--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,63 +2,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-<!-- add after bootstrap.min.css -->
-<link rel="stylesheet" href="https://cdn.rawgit.com/afeld/bootstrap-toc/v1.0.0/dist/bootstrap-toc.min.css">
-<!-- add after bootstrap.min.js -->
-<script src="https://cdn.rawgit.com/afeld/bootstrap-toc/v1.0.0/dist/bootstrap-toc.min.js"></script>
-
 <style>
-/* small screens */
-/* Default value is 768px, iphone X is 1125px, so I need to tune it up */
-/* It seems to use logical pixel, not exact pixel, I finally set it to 800px, so I can see the diff in debug mode */
-@media (max-width: 800px) {
-  /* override stickyness so that the navigation does not follow scrolling */
-  nav[data-toggle='toc'] {
-    margin-bottom: 42px;
-    position: static;
-  }
-
-  /* PICK ONE */
-  /* don't expand nested items, which pushes down the rest of the page when navigating */
-  nav[data-toggle='toc'] .nav .nav.navbar-nav {
-    display: none;
-  }
-  /* alternatively, if you *do* want the second-level navigation to be shown (as seen on this page on mobile), use this */
-  /*
-  nav[data-toggle='toc'] .nav .nav {
-    display: block;
-  }
-  */
-}
-nav[data-toggle=toc] .nav>li>a {
-  /* color: rgba(255,255,255,.5) */
-  color: whitesmoke;
-  padding: 0px 0px;
-}
-nav[data-toggle=toc] .nav-link.active, nav[data-toggle=toc] .nav-link.active:focus, nav[data-toggle=toc] .nav-link.active:hover
+li
 {
-  padding-left: 5px;
+	text-align: left;
 }
 </style>
 
-
 <aside class="sidebar">
   <div class="container sidebar-sticky">
-    <nav id="toc"></nav>
-    <script>
-    $(function() {
-      var navSelector = '#toc';
-      var $myNav = $(navSelector);
-      Toc.init({
-        $nav: $myNav,
-        $scope: $('div.post')
-      });
-      $('body').scrollspy({
-          target: navSelector
-      });
-    });
-    </script>
-
     <div class="sidebar-about">
       <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
       <p class="lead">
@@ -74,14 +26,12 @@ nav[data-toggle=toc] .nav-link.active, nav[data-toggle=toc] .nav-link.active:foc
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="{{ .Site.BaseURL }}">Home</a> </li>
         {{ range .Site.Menus.main -}}
           <li><a href="{{.URL}}"> {{ .Name }} </a></li>
         {{- end }}
       </ul>
     </nav>
 
-
-    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}}</p>
   </div>
+  {{.TableOfContents}}
 </aside>
