--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
 <hr>
 
 <div class="posts">
-{{ range where .Data.Pages.ByLastmod.Reverse "Date" "ge" (now.AddDate -2 0 0) -}}
+{{ range .Data.Pages -}}
 <article class="post">
   {{ $alternate_title := replaceRE "[0-9]{4}-[0-9]{2}-[0-9]{2}" "" .File.BaseFileName }}
   {{ $alternate_title := replace $alternate_title "-" " " | title }}
