--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
 {{ range sort .Sections "Path" -}}
   <li>
     <span><a href="{{ .Permalink }}">{{ .Title }}</a> <time class="pull-right post-list" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Mon, Jan 2, 2006" }}</time></span>
-    <br><span>{{ .Path }}</span>
+	<!-- <br><span>{{ .Path }}</span> -->
   </li>
 {{- end }}
 </ul>
