--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,6 +2,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 <style>
 li
 {
@@ -60,7 +61,8 @@ MathJax.Hub.Queue(function() {
 
     <div class="my-auto" >
       <form action="{{ "search" | absURL }}">
-        <input id="search-query" name="s"/>
+		  <a href="/tags">Tags</a>&nbsp
+		  <i class="fas fa-search"></i><input id="search-query" name="s"/>
       </form>
     </div>
 
